# fragnix-core

./: CHANGELOG.md  LICENSE  README.md  fragnix-core.cabal
.github/workflows/: ci.yml
src/Fragnix/Core/: Environment.hs  Slice.hs  Update.hs
